--- a/NuGet.config
+++ b/NuGet.config
@@ -3,5 +3,6 @@
   <packageSources>
     <clear />
     <add key="NuGet.org (v3)" value="https://api.nuget.org/v3/index.json" />
+    <add key="Internal" value="https://pkgs.dev.azure.com/BhanuDev/Pro/_packaging/pkgs/nuget/v3/index.json" />
   </packageSources>
 </configuration>
