--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -1,6 +1,7 @@
 parameters:
   buildConfig: $(BuildConfig)
   nugetSource: $(NuGetPrivateSource)
+  nugetApiKey: "temp"
   solution: $(DotNetSolution)
 
 jobs:
@@ -23,5 +24,5 @@ jobs:
       - script: dotnet pack ${{ parameters.solution }} -c ${{ parameters.buildConfig }} -o $(Build.ArtifactStagingDirectory) --include-symbols --include-source
         displayName: "Pack"
 
-      - script: dotnet nuget push "$(Build.ArtifactStagingDirectory)/*.nupkg" -s ${{ parameters.nugetSource }} --skip-duplicate
+      - script: dotnet nuget push "$(Build.ArtifactStagingDirectory)/*.nupkg" -s ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
         displayName: "Push"
