--- a/.azure/.config/variables.yml
+++ b/.azure/.config/variables.yml
@@ -22,4 +22,5 @@ variables:
     branchType: feature
     branchEnvironment: wip
   DotNetSolution: "ProEnum.sln"
-  NuGetPrivateSource: "Internal"
+  NuGetPrivateSource: Internal
+  NuGetPrivateApiKey: az
