--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -1,7 +1,7 @@
 parameters:
   buildConfig: $(BuildConfig)
   nugetSource: $(NuGetPrivateSource)
-  nugetApiKey: "temp"
+  nugetApiKey: $(NuGetPrivateApiKey)
   solution: $(DotNetSolution)
 
 jobs:
