--- a/.azure/.config/variables.yml
+++ b/.azure/.config/variables.yml
@@ -22,5 +22,6 @@ variables:
     branchType: feature
     branchEnvironment: wip
   DotNetSolution: "ProEnum.sln"
-  NuGetPrivateSource: Internal
+  NuGetPrivateSource: pkgs
   NuGetPrivateApiKey: az
+  - group: global
