--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -11,7 +11,7 @@ jobs:
       vmImage: $(BuildImage)
     steps:
       - task: UseDotNet@2
-        displayName: "Use .NET Core SDK"
+        displayName: "Setup : .NET Core SDK"
         inputs:
           packageType: sdk
           version: 5.0.x
@@ -30,6 +30,7 @@ jobs:
           packagesToPush: "$(Build.ArtifactStagingDirectory)/*.nupkg"
           nuGetFeedType: "internal"
           publishVstsFeed: "377aecd9-7ece-4d91-b4a6-3c46305db51b/2192b590-17a3-4d7d-8a46-0aad423ec3e1"
+          allowPackageConflicts: true
 
       - script: dotnet nuget push "$(Build.ArtifactStagingDirectory)/*.nupkg" -s ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
         displayName: "Push"
