--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -24,5 +24,13 @@ jobs:
       - script: dotnet pack ${{ parameters.solution }} -c ${{ parameters.buildConfig }} -o $(Build.ArtifactStagingDirectory) --include-symbols --include-source
         displayName: "Pack"
 
-      - script: dotnet nuget push "$(Build.ArtifactStagingDirectory)/*.nupkg" -s ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: "push"
+          packagesToPush: "$(Build.ArtifactStagingDirectory)/*.nupkg"
+          nuGetFeedType: "internal"
+          publishVstsFeed: $(VstsFeed)
         displayName: "Push"
+
+      # - script: dotnet nuget push "$(Build.ArtifactStagingDirectory)/*.nupkg" -s ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
+      #   displayName: "Push"
