--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -27,7 +27,7 @@ jobs:
       - task: DotNetCoreCLI@2
         inputs:
           command: "push"
-          packagesToPush: "$(Build.ArtifactStagingDirectory)/*.nupkg"
+          packagesToPush: "$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg"
           nuGetFeedType: "internal"
           publishVstsFeed: $(VstsFeed)
         displayName: "Push"
