--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -1,5 +1,6 @@
 parameters:
   buildConfig: $(BuildConfig)
+  nugetFilter: "$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg"
   nugetSource: $(NuGetPrivateSource)
   nugetApiKey: $(NuGetPrivateApiKey)
   solution: $(DotNetSolution)
@@ -27,7 +28,7 @@ jobs:
       - task: DotNetCoreCLI@2
         inputs:
           command: "push"
-          packagesToPush: "$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg"
+          packagesToPush: $(nugetFilter)
           nuGetFeedType: "internal"
           publishVstsFeed: $(VstsFeed)
         displayName: "Push"
