--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -28,7 +28,7 @@ jobs:
       - task: DotNetCoreCLI@2
         inputs:
           command: "push"
-          packagesToPush: $(nugetFilter)
+          packagesToPush: ${{ parameters.nugetFilter }}
           nuGetFeedType: "internal"
           publishVstsFeed: $(VstsFeed)
         displayName: "Push"
