--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -33,7 +33,7 @@ jobs:
           publishVstsFeed: $(VstsFeed)
         displayName: "Push"
 
-      - script: dotnet nuget push --source https://pkgs.dev.azure.com/BhanuDev/377aecd9-7ece-4d91-b4a6-3c46305db51b/_packaging/a162607c-4a97-7f6f-8b58-48856f543ca9/nuget/v3/index.json --api-key VSTS ${{ parameters.nugetFilter }}
+      - script: dotnet nuget push --source https://pkgs.dev.azure.com/BhanuDev/377aecd9-7ece-4d91-b4a6-3c46305db51b/_packaging/a162607c-4a97-7f6f-8b58-48856f543ca9/nuget/v3/index.json --api-key VSTS ${{ parameters.nugetFilter }} --skip-duplicate
 
       # - script: dotnet nuget push "$(Build.ArtifactStagingDirectory)/*.nupkg" -s ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
       #   displayName: "Push"
