--- a/.azure/.templates/nuget-ado.yml
+++ b/.azure/.templates/nuget-ado.yml
@@ -1,23 +1,16 @@
 parameters:
   buildConfig: $(BuildConfig)
   nugetFilter: "$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg"
-  nugetSource: https://api.nuget.org/v3/index.json
-  nugetApiKey: $(NuGetOrgApiKey)
+  nugetSource: $(NuGetPrivateSource)
   solution: $(DotNetSolution)
 
 jobs:
   - job: BuildPackPush
     continueOnError: true
-    pool:
-      vmImage: $(BuildImage)
     steps:
-      - task: UseDotNet@2
-        displayName: "Setup : .NET Core SDK"
-        inputs:
-          packageType: sdk
-          version: 5.0.x
-          includePreviewVersions: true
-          installationPath: $(Agent.ToolsDirectory)/dotnet
+      - template: setup-dotnet.yml
+        parameters:
+          previewEnabled: true
 
       - script: dotnet build ${{ parameters.solution }} -c ${{ parameters.buildConfig }}
         displayName: "Build"
@@ -25,5 +18,10 @@ jobs:
       - script: dotnet pack ${{ parameters.solution }} -c ${{ parameters.buildConfig }} -o $(Build.ArtifactStagingDirectory) --include-symbols --include-source
         displayName: "Pack"
 
-      - script: dotnet nuget push ${{ parameters.nugetFilter }} -s ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: "push"
+          packagesToPush: ${{ parameters.nugetFilter }}
+          nuGetFeedType: "internal"
+          publishVstsFeed: ${{ parameters.nugetSource }}
         displayName: "Push"
