--- a/.azure/nuget/azure-pipelines.yml
+++ b/.azure/nuget/azure-pipelines.yml
@@ -37,6 +37,9 @@ stages:
     displayName: NuGet
     dependsOn: []
     jobs:
+      - template: ../.templates/nuget-ado.yml
+        parameters:
+          buildConfig: "Release"
       - template: ../.templates/nuget.yml
         parameters:
           buildConfig: "Release"
