--- a/.azure/.templates/nuget-ado.yml
+++ b/.azure/.templates/nuget-ado.yml
@@ -5,7 +5,7 @@ parameters:
   solution: $(DotNetSolution)
 
 jobs:
-  - job: BuildPackPush
+  - job: AzureArtifactsNugetBuildPackPush
     continueOnError: true
     steps:
       - template: setup-dotnet.yml
