--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -6,18 +6,14 @@ parameters:
   solution: $(DotNetSolution)
 
 jobs:
-  - job: BuildPackPush
+  - job: NugetOrgBuildPackPush
     continueOnError: true
     pool:
       vmImage: $(BuildImage)
     steps:
-      - task: UseDotNet@2
-        displayName: "Setup : .NET Core SDK"
-        inputs:
-          packageType: sdk
-          version: 5.0.x
-          includePreviewVersions: true
-          installationPath: $(Agent.ToolsDirectory)/dotnet
+      - template: setup-dotnet.yml
+        parameters:
+          previewEnabled: true
 
       - script: dotnet build ${{ parameters.solution }} -c ${{ parameters.buildConfig }}
         displayName: "Build"
