--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -21,5 +21,5 @@ jobs:
       - script: dotnet pack ${{ parameters.solution }} -c ${{ parameters.buildConfig }} -o $(Build.ArtifactStagingDirectory) --include-symbols --include-source
         displayName: "Pack"
 
-      - script: dotnet nuget push ${{ parameters.nugetFilter }} -s ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
+      - script: dotnet nuget push ${{ parameters.nugetFilter }} --source ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
         displayName: "Push"
