--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -23,3 +23,4 @@ jobs:
 
       - script: dotnet nuget push ${{ parameters.nugetFilter }} --source ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
         displayName: "Push"
+    displayName: "Nuget.Org - Steps"
