--- a/.azure/.templates/nuget-ado.yml
+++ b/.azure/.templates/nuget-ado.yml
@@ -25,3 +25,4 @@ jobs:
           nuGetFeedType: "internal"
           publishVstsFeed: ${{ parameters.nugetSource }}
         displayName: "Push"
+    displayName: "Azure Artifacts - Steps"
