--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -1,6 +1,6 @@
 parameters:
   buildConfig: $(BuildConfig)
-  nugetFilter: $(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg
+  nugetFilter: $(Build.ArtifactStagingDirectory)/**/*.nupkg
   nugetSource: https://api.nuget.org/v3/index.json
   nugetApiKey: $(NuGetOrgApiKey)
   solution: $(DotNetSolution)
