added logo and descriptions

--- a/.azure/.templates/nuget-ado.yml
+++ b/.azure/.templates/nuget-ado.yml
@@ -25,4 +25,4 @@ jobs:
           nuGetFeedType: "internal"
           publishVstsFeed: ${{ parameters.nugetSource }}
         displayName: "Push"
-    displayName: "Azure Artifacts - Steps"
+    displayName: "Packages: Azure Artifacts"
