--- a/.azure/nuget/azure-pipelines.yml
+++ b/.azure/nuget/azure-pipelines.yml
@@ -43,3 +43,4 @@ stages:
       - template: ../.templates/nuget.yml
         parameters:
           buildConfig: "Release"
+        condition: contains('$(branchType)', 'release')
