--- a/src/ProEnum.Json/ProEnum.Json.csproj
+++ b/src/ProEnum.Json/ProEnum.Json.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>$(LibraryTargetFrameWorks)</TargetFrameworks>
+    <PackageDescription>ProEnum - JSON Converter/Serialization using System.Text.Json</PackageDescription>
   </PropertyGroup>
 
   <ItemGroup>
