conditional release for NuGet.org

--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -6,7 +6,7 @@ parameters:
   solution: $(DotNetSolution)
 
 jobs:
-  - job: NugetOrgBuildPackPush
+  - job: NuGetOrgBuildPackPush
     continueOnError: true
     pool:
       vmImage: $(BuildImage)
@@ -23,4 +23,5 @@ jobs:
 
       - script: dotnet nuget push ${{ parameters.nugetFilter }} --source ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
         displayName: "Push"
-    displayName: "Packages: Nuget.Org"
+    condition: contains('$(branchType)', 'release')
+    displayName: "Packages: NuGet.Org"
