--- a/.azure/.templates/nuget-ado.yml
+++ b/.azure/.templates/nuget-ado.yml
@@ -15,7 +15,7 @@ jobs:
       - script: dotnet build ${{ parameters.solution }} -c ${{ parameters.buildConfig }}
         displayName: "Build"
 
-      - script: dotnet pack ${{ parameters.solution }} -c ${{ parameters.buildConfig }} -o $(Build.ArtifactStagingDirectory) --include-symbols --include-source
+      - script: dotnet pack ${{ parameters.solution }} -c ${{ parameters.buildConfig }} -o $(Build.ArtifactStagingDirectory) -p:PackageVersion=$(SemVer) --version-suffix "CI-$(branchType)" --include-symbols --include-source
         displayName: "Pack"
 
       - task: DotNetCoreCLI@2
