--- a/.azure/.templates/nuget.yml
+++ b/.azure/.templates/nuget.yml
@@ -23,5 +23,5 @@ jobs:
 
       - script: dotnet nuget push ${{ parameters.nugetFilter }} --source ${{ parameters.nugetSource }} --api-key ${{ parameters.nugetApiKey }} --skip-duplicate
         displayName: "Push"
-    condition: contains('$(branchType)', 'release')
+    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/release/'))
     displayName: "Packages: NuGet.Org"
