changing ProEnum to Enumeration, will introduce ProEnum to support types

--- a/src/Pro.Enum.Json/Pro.Enum.Json.csproj
+++ b/src/Pro.Enum.Json/Pro.Enum.Json.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProEnum\ProEnum.csproj" />
+    <ProjectReference Include="..\Pro.Enum\Pro.Enum.csproj" />
   </ItemGroup>
 
 </Project>
