--- a/src/Pro.Enum.NewtonsoftJson/Pro.Enum.NewtonsoftJson.csproj
+++ b/src/Pro.Enum.NewtonsoftJson/Pro.Enum.NewtonsoftJson.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProEnum\ProEnum.csproj" />
+    <ProjectReference Include="..\Pro.Enum\Pro.Enum.csproj" />
   </ItemGroup>
 
 </Project>
