--- a/src/Pro.Enum/Pro.Enum.csproj
+++ b/src/Pro.Enum/Pro.Enum.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>$(LibraryTargetFrameWorks)</TargetFrameworks>
+    <PackageTags>DDD;Pro;ProEnum;Enum;Enumeration;netstandard2.0;net5;</PackageTags>
     <PackageDescription>ProEnum - Custom Enumeration implementation</PackageDescription>
   </PropertyGroup>
 
