updated build variable

--- a/.azure/.config/variables.yml
+++ b/.azure/.config/variables.yml
@@ -21,6 +21,6 @@ variables:
   ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/feature/') }}:
     branchType: feature
     branchEnvironment: wip
-  DotNetSolution: "ProEnum.sln"
+  DotNetSolution: "Pro.Enum.sln"
   NuGetPrivateSource: pkgs
   NuGetPrivateApiKey: az
