--- a/src/Pro.Enum.NewtonsoftJson/Pro.Enum.NewtonsoftJson.csproj
+++ b/src/Pro.Enum.NewtonsoftJson/Pro.Enum.NewtonsoftJson.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>$(LibraryTargetFrameWorks)</TargetFrameworks>
+    <PackageTags>DDD;Pro;ProEnum;Enum;Enumeration;JSON;JSON.NET;Newtonsoft.JSON;netstandard2.0;net5;</PackageTags>
     <PackageDescription>ProEnum - JSON Converter/Serialization using Newtonsoft.Json</PackageDescription>
   </PropertyGroup>
 
@@ -10,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProEnum\ProEnum.csproj" />
+    <ProjectReference Include="..\Pro.Enum\Pro.Enum.csproj" />
   </ItemGroup>
 
 </Project>
