--- a/src/Pro.Enum.Json/Pro.Enum.Json.csproj
+++ b/src/Pro.Enum.Json/Pro.Enum.Json.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>$(LibraryTargetFrameWorks)</TargetFrameworks>
+    <TargetFrameworks>$(LibraryTargetFrameworksAll)</TargetFrameworks>
     <PackageTags>DDD;Pro;ProEnum;Enum;Enumeration;JSON;System.Text.Json;netstandard2.0;net5;</PackageTags>
     <PackageDescription>ProEnum - JSON Converter/Serialization using System.Text.Json</PackageDescription>
   </PropertyGroup>
