--- a/src/Pro.Enum.NewtonsoftJson/Pro.Enum.NewtonsoftJson.csproj
+++ b/src/Pro.Enum.NewtonsoftJson/Pro.Enum.NewtonsoftJson.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>$(LibraryTargetFrameWorks)</TargetFrameworks>
+    <TargetFrameworks>$(LibraryTargetFrameworksAll)</TargetFrameworks>
     <PackageTags>DDD;Pro;ProEnum;Enum;Enumeration;JSON;JSON.NET;Newtonsoft.JSON;netstandard2.0;net5;</PackageTags>
     <PackageDescription>ProEnum - JSON Converter/Serialization using Newtonsoft.Json</PackageDescription>
   </PropertyGroup>
