--- a/src/Pro.Enum/Pro.Enum.csproj
+++ b/src/Pro.Enum/Pro.Enum.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>$(LibraryTargetFrameWorks)</TargetFrameworks>
+    <TargetFrameworks>$(LibraryTargetFrameworksAll)</TargetFrameworks>
     <PackageTags>DDD;Pro;ProEnum;Enum;Enumeration;netstandard2.0;net5;</PackageTags>
     <PackageDescription>ProEnum - Custom Enumeration implementation</PackageDescription>
   </PropertyGroup>
