--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -6,6 +6,14 @@
     <MongoDbVersion>2.11.4</MongoDbVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net5.0'">
+    <AspNetVersion>[5.0.0,6.0.0)</AspNetVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <AspNetVersion>[6.0.0,7.0.0)</AspNetVersion>
+  </PropertyGroup>
+
   <!-- Packages : Code Analysis -->
   <ItemGroup>
     <PackageReference Update="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.1" PrivateAssets="All" />
@@ -26,7 +34,7 @@
     <PackageReference Update="System.Text.Json" Version="$(AspNetVersion)" />
 
     <PackageReference Update="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
-    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     <PackageReference Update="System.ComponentModel.Annotations" Version="$(AspNetVersion)" />
   </ItemGroup>
 
